bug fix: Not showing suggested tags when trying to add tags at project settings., and also fix sidebar scrolling problem.

--- a/src/style/framework/src/_sidebars.scss
+++ b/src/style/framework/src/_sidebars.scss
@@ -41,22 +41,22 @@
 
   .sidebar-container {
     width: 100%;
-    min-height: 100%;
+    min-height: 100vh;
     background: $bg-color-light;
     cursor: default;
   }
 
   .sidebar-header {
     position: sticky;
+    z-index: 2;
     top: 0;
     color: $light-color;
   }
 
   .sidebar-body {
     flex: 1 1 100%;
-    min-height: auto;
     overflow: auto;
-    padding: 0;
+    min-height: 100vh;
     position: relative;
   }
 
