--- a/src/style/framework/src/utilities/_paddings.scss
+++ b/src/style/framework/src/utilities/_paddings.scss
@@ -94,3 +94,7 @@
 .p-bottom-30 {
   padding-bottom: 1.5rem;
 }
+
+.p-bottom-50 {
+  padding-bottom: 2.5rem;
+}
